--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,9 @@ migrate_working_dir/
 .packages
 .pub-cache/
 .pub/
-/build/
+/build/flutter_assets
+/build/eef6d020c9d7674356483307ae2bad69
+/build/93cae48154605b2b23f957321f3fac0a.cache.dill.track.dill
 
 # Symbolication related
 app.*.symbols
